Fixed alignment

--- a/src/styles/ListingTemplate.css
+++ b/src/styles/ListingTemplate.css
@@ -65,7 +65,7 @@
     justify-content: flex-start;
     margin: 8px 0;
     align-items: flex-start;
-    gap: 10px;
+    gap: 30px;
     margin-left: 280px;
   }
   
@@ -78,16 +78,22 @@
   .description p, .details p, .reviews div {
     margin: 8px 0;
   }
+
+  .amenities, .reviews h4 {
+    text-align: center;
+  }
   
   .amenities ul {
     padding: 0;
     list-style: none;
     display: flex;
     align-items: flex-start;
+    flex-wrap: wrap;
   }
   
   .amenities li {
     margin: 4px 0;
+    flex: 1 0 30%;
     padding-left: 20px;
     color: var(--text-color-light);
   }
@@ -111,7 +117,7 @@
   
   .review {
     background-color: #f0f0f0; /* Light grey background, similar to a textbox */
-    border: 1px solid #ccc; /* Light grey border */
+    border: 1px solid #5c5656; /* Light grey border */
     border-radius: 4px; /* Slightly rounded corners for a modern look */
     padding: 16px; /* Space inside the box */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow to make it "pop" */
